Added onPause and onResume methods

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".StopwatchActivity"
-            android:configChanges="orientation|screenSize">
+            android:name=".StopwatchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
